qa/logs/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: logs-kibana
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: logs-basic-auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
    - hosts:
      - logs.qa.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: logs.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: logs-kibana
            servicePort: 5601
